apps/nginx-gateway/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nerdd-gateway
  annotations:
    cert-manager.io/issuer: nerdd-issuer
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      hostname: nerdd.univie.ac.at
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: nerdd.univie.ac.at
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: nerdd-tls
      allowedRoutes:
        namespaces:
          from: All
